# libgdata

./: .bzrignore  .gitignore  ChangeLog  HACKING  MAINTAINERS  Makefile.am  Makefile.decl  NEWS  README  autogen.sh  config.h.in  configure.in  gdata.pc.in  libgdata.doap  libgdata.pc.in
docs/reference/: .gitignore  MODULE.types  Makefile.am  gdata-docs.xml  gdata-overview.xml  gdata-sections.txt  gdata.sgml  structure.dia  version.xml.in
gdata/: Makefile.am  gdata-access-handler.c  gdata-access-handler.h  gdata-access-rule.c  gdata-access-rule.h  gdata-atom.c  gdata-atom.h  gdata-entry.c  gdata-entry.h  gdata-feed.c  gdata-feed.h  gdata-gdata.c  gdata-gdata.h  gdata-marshal.list  gdata-media-group.c  gdata-media-group.h  gdata-media-rss.c  gdata-media-rss.h  gdata-parsable.c  gdata-parsable.h  gdata-parser.c  gdata-parser.h  gdata-private.h  gdata-query.c  gdata-query.h  gdata-service.c  gdata-service.h  gdata-types.c  gdata-types.h  gdata.h  gdata.symbols
gdata/atom/: Makefile.am  gdata-author.c  gdata-author.h  gdata-category.c  gdata-category.h  gdata-generator.c  gdata-generator.h  gdata-link.c  gdata-link.h
gdata/gd/: Makefile.am  gdata-gd-email-address.c  gdata-gd-email-address.h  gdata-gd-im-address.c  gdata-gd-im-address.h  gdata-gd-organization.c  gdata-gd-organization.h  gdata-gd-phone-number.c  gdata-gd-phone-number.h  gdata-gd-postal-address.c  gdata-gd-postal-address.h  gdata-gd-reminder.c  gdata-gd-reminder.h  gdata-gd-when.c  gdata-gd-when.h  gdata-gd-where.c  gdata-gd-where.h  gdata-gd-who.c  gdata-gd-who.h
gdata/media/: Makefile.am  gdata-media-category.c  gdata-media-category.h  gdata-media-content.c  gdata-media-content.h  gdata-media-credit.c  gdata-media-credit.h  gdata-media-group.c  gdata-media-group.h  gdata-media-thumbnail.c  gdata-media-thumbnail.h
gdata/services/: Makefile.am  gdata-youtube-media-group.c  gdata-youtube-media-group.h  gdata-youtube-service.c  gdata-youtube-service.h  gdata-youtube-video-feed.c  gdata-youtube-video-feed.h  gdata-youtube-video.c  gdata-youtube-video.h
gdata/services/calendar/: Makefile.am  gdata-calendar-calendar.c  gdata-calendar-calendar.h  gdata-calendar-event.c  gdata-calendar-event.h  gdata-calendar-feed.c  gdata-calendar-feed.h  gdata-calendar-query.c  gdata-calendar-query.h  gdata-calendar-service.c  gdata-calendar-service.h
gdata/services/contacts/: Makefile.am  gdata-contacts-contact.c  gdata-contacts-contact.h  gdata-contacts-query.c  gdata-contacts-query.h  gdata-contacts-service.c  gdata-contacts-service.h
gdata/services/documents/: Makefile.am  gdata-documents-entry.c  gdata-documents-entry.h  gdata-documents-feed.c  gdata-documents-feed.h  gdata-documents-folder.c  gdata-documents-folder.h  gdata-documents-headers.h  gdata-documents-presentation.c  gdata-documents-presentation.h  gdata-documents-query.c  gdata-documents-query.h  gdata-documents-service.c  gdata-documents-service.h  gdata-documents-spreadsheet.c  gdata-documents-spreadsheet.h  gdata-documents-text.c  gdata-documents-text.h
gdata/services/picasaweb/: Makefile.am  gdata-picasaweb-album.c  gdata-picasaweb-album.h  gdata-picasaweb-file.c  gdata-picasaweb-file.h  gdata-picasaweb-query.c  gdata-picasaweb-query.h  gdata-picasaweb-service.c  gdata-picasaweb-service.h
gdata/services/youtube/: Makefile.am  gdata-youtube-content.c  gdata-youtube-content.h  gdata-youtube-control.c  gdata-youtube-control.h  gdata-youtube-credit.c  gdata-youtube-credit.h  gdata-youtube-group.c  gdata-youtube-group.h  gdata-youtube-query.c  gdata-youtube-query.h  gdata-youtube-service.c  gdata-youtube-service.h  gdata-youtube-state.c  gdata-youtube-state.h  gdata-youtube-video.c  gdata-youtube-video.h  gdata-youtube.c  gdata-youtube.h
gdata/tests/: Makefile.am  calendar.c  common.h  contacts.c  documents.c  general.c  massif  memcheck  memory.c  picasaweb.c  test.doc  test.ods  test.odt  test.ppt  test.xls  test_updated.odt  test_updated_file.ppt  youtube.c
po/: ChangeLog  LINGUAS  POTFILES.in  ca.po  de.po  el.po  en_GB.po  es.po  fr.po  gl.po  nb.po  pa.po  sv.po
